fixed bug on mobile add to cart form

--- a/styles.css
+++ b/styles.css
@@ -1172,7 +1172,7 @@ nav a {
 }
 
 @media screen and (max-width: 425px){
-    .cart-container .add-to-cart {
+    .full-width.cart-container {
         display: none;
     }
 }
